--- a/index_boot3.html
+++ b/index_boot3.html
@@ -145,7 +145,7 @@
         <div class="container-fluid"  id="aboutContent">
             <div class='row'>
                 <div class="col-md-8" >
-                    <h3>About Us</h3>
+                    <h2>About Us</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
                         standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
                         to make a type specimen book. It has survived not only five centuries, but also the leap into electronic
@@ -164,7 +164,7 @@
             <div class='container-fluid' id="accordIns">
                 <div class="row" >
                     <div class="col-lg-4 col-md-12 col-sm-12">
-                        <h3>Accepted Insurances</h3>
+                        <h2>Accepted Insurances</h2>
                     </div>
                     <div class="col-lg-8 col-md-12 col-md-12" >
                         <div class="row noMargin">
@@ -210,32 +210,32 @@
         <div class="container-fluid" id="offPolContent">
             <div class='row'>
                 <div class="col-md-8">
-                    <h3>Office Policies</h3>
-                    <h6>Appointments & Cancellations</h6>
+                    <h2>Office Policies</h2>
+                    <h4>Appointments & Cancellations</h4>
                     <p>You may schedule an appointment with a patient care coordinator.</p>
                     <p>With the exception of serious emergencies, it is expected that you keep your appointments. If you need to reschedule an appointment,
                         it is necessary that you advise the office at least 24 hours in advance. Your consideration in this matter will allow
                         me to accommodate other patients who could benefit from an appointment.</p>
-                    <h6>Payment</h6>
+                    <h4>Payment</h4>
                     
                 <p>My office accepts the following methods of payment for co-payments, deductibles and services that are not covered by insurance:</p>
 
                     <div class="row" id ="cards">
-                         <div class='col-sm-12 col-md-6 col-lg-6'>
+                         <div class='col-xs-12 col-sm-6 col-md-6'>
                             <img src="imgs/paymentOpt_amex.png" alt="" class="cardImg"><span class="cardTxt"> American Express</span><br>
                             <img src="imgs/paymentOpt_discover.png" alt="" class="cardImg"><span class="cardTxt"> Discover</span>
                         </div>
-                        <div class='col-sm-12 col-md-6 col-lg-6'>
+                        <div class='col-xs-12 col-sm-6 col-md-6'>
                             <img src="imgs/paymentOpt_master.png" alt="" class="cardImg"><span class="cardTxt"> Mastercard</span><br>
                             <img src="imgs/paymentOpt_visa.png" alt="" class="cardImg"><span class="cardTxt"> Visa</span>
                          </div>
                      </div>
             
                 </div>
-                <div class="col-md-4" id="bookapptImgs">
-                    <img src="imgs/btn_bookappt.jpg" alt="" class="bookappt_img">
-                    <img src="imgs/btn_portal.jpg" alt="" class="bookappt_img">
-                    <img src="imgs/btn_vcard.jpg" alt="" class="bookappt_img">
+                <div class="col-sm-12 col-md-4 col-lg-4" id="bookapptImgs">
+                    <img src="imgs/btn_bookappt.jpg" alt="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <img src="imgs/btn_portal.jpg" alt="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <img src="imgs/btn_vcard.jpg" alt="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 </div>
             </div>
         </div>
@@ -245,84 +245,84 @@
             <div class='container-fluid' id="accordEdu">
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12">
-                        <h3>Patient Education</h3>
+                        <h2>Patient Education</h2>
                     </div>
                     <div class="col-lg-8 col-md-12 col-md-12">
                         <div class="row noMargin">
                             <ul class="txtDefault_bySpecialty">
-                                <li class="">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list">
                                     <a>Specialty Content 001</a>
                                 </li>
-                                <li class="">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list">
                                     <a>Specialty Content 002</a>
                                 </li>
-                                <li class="">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list">
                                     <a>Specialty Content 003</a>
                                 </li>
-                                <li class="">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list">
                                     <a>Specialty Content 004</a>
                                 </li>
-                                <li class="">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list">
                                     <a>Specialty Content 005</a>
                                 </li>
-                                <li class="">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list">
                                     <a>Specialty Content 006</a>
                                 </li>
-                                <li class="">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list">
                                     <a>Specialty Content 007</a>
                                 </li>
-                                <li class="">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list">
                                     <a>Specialty Content 008</a>
                                 </li>
-                                <li class="">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list">
                                     <a>Specialty Content 009</a>
                                 </li>
-                                <li class="">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list">
                                     <a>Specialty Content 010</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 011</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 012</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 013</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 014</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 015</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 016</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 017</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 018</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 019</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 020</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 021</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 022</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 023</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 024</a>
                                 </li>
-                                <li class=" xpContent-item">
+                                <li class="col-xxs-12 col-xs-12 col-sm-6 col-md-6 accordion-list xpContent-item">
                                     <a>Specialty Content 025</a>
                                 </li>
                             </ul>
@@ -344,11 +344,11 @@
 
         <!-- Locations section -->
         <div class="container-fluid" id="locationContent" >
-            <h3 style="padding-bottom:3px;">Locations</h3>
+            <h2>Locations</h2>
             <div class='row'>
-                    <div class="col-lg-4 col-md-6 col-sm-12" id="locationInfo_addr" >
-                    <h5>Medical Center Name </h5>
-                    <h6>999 Main St<br>Massapequa, NY 11758-1234</h6>
+                    <div class="col-md-4 col-sm-6 col-xs-12" id="locationInfo_addr" >
+                    <h4>Medical Center Name </h4>
+                    <h5>999 Main St<br>Massapequa, NY 11758-1234</h5>
                     <table>
                         <tr>
                             <th>Phone:</th>
@@ -364,8 +364,8 @@
                         </tr>
                     </table>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12" id="locationInfo_hrs" >
-                        <h5>Office Hours:</h5>
+                    <div class="col-md-4 col-sm-6 col-xs-12" id="locationInfo_hrs" >
+                        <h4>Office Hours:</h4>
                         <table>
                             <tr>
                                 <th>Sunday:</th>
@@ -397,8 +397,8 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="col-lg-4 col-md-12 col-sm-12" >
-                        <img src="imgs/Googlemap.jpg" alt="" id="locationInfo_map">
+                    <div class="col-md-4 col-sm-12 col-xs-12" >
+                        <img src="imgs/Googlemap.jpg" alt="" class="img-fluid" id="locationInfo_map">
                     </div>
             </div>     
         </div>
@@ -406,7 +406,7 @@
         <div class="container-fluid" id="simpleContact">
             <div class='row'>
                 <div class="col-lg-12">
-                    <h3>Contact</h3>
+                    <h2>Contact</h2>
                     <p><b><u>Do not</u></b> use this form in case of an emergency!</p>
                     <form id="contact-form" method="post" action="#" role="form" >
                         <div class="controls">
